# mtech_chat

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  client.cpp  message.hpp  server.cpp
win_bin/res/: client_config
